Substantialy improved data collection logic - decoupled model generation setup from data accumulation, support for propagatin multiple models downstream and applying different accumulation strategies both between various models and also for models and parsed data